# Leash

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: work-item.md
.github/workflows/: ci.yml
benches/: overhead.rs
benches/workloads/: macro.sh
docs/: CONTEXT.md  README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-supervisor-child-process-separation.md  0003-defense-in-depth-seccomp-and-landlock.md  0004-policy-as-declarative-data.md  0005-time-travel-by-snapshot-not-replay.md  0006-mediate-at-os-boundary-not-sdk.md  0007-implementation-language-rust.md  0008-project-name-leash.md  0009-snapshot-mechanism-overlayfs-with-copy-fallback.md  0010-two-explicit-modes-record-only-and-enforce.md  0011-single-threaded-notify-decision-loop.md  0012-kernel-floor-linux-5-19.md  0013-kernel-backstop-per-expressible-dimension.md  0014-defer-arm64-reference-target.md  0015-preflight-version-gate-and-derived-probes.md  0016-raw-libc-for-the-seccomp-boundary.md  0017-record-only-allows-use-continue.md  0018-enforcement-path-dependency-decisions.md  0019-mode-scope-of-the-fail-closed-enumeration.md  0019-record-only-malformed-network-facts-record-raw.md  0020-confined-realizer-and-socket-duplication.md  README.md
docs/design/: README.md  architecture.md  cli.md  escapes.md  notify-loop.md  policy.md  snapshot.md  syscalls.md  trace.md
docs/measurements/: 0001-m1-overhead.md
docs/process/: work-tracking.md
docs/spec/: SPEC.md
src/: cli.rs  lib.rs  main.rs  measure.rs  policy.rs  recorder.rs  sandbox.rs  snapshot.rs  supervisor.rs
src/policy/: engine.rs  glob.rs  host.rs  mod.rs
src/recorder/: report.rs
src/sandbox/: child.rs  filter.rs  landlock.rs  (+1 more)
tests/: broker_linux.rs  cli_linux.rs  durability.rs  landlock_linux.rs  notify_linux.rs  preflight_linux.rs  spawn_linux.rs
(+9 files in other folders)
