[package]
name = "leash"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Supervise an AI coding agent at the OS boundary: record, enforce, rewind."
license = "MIT OR Apache-2.0"
repository = "https://github.com/snitilf/Leash"

# every crate is attack surface; each addition is justified in review.
# serde/serde_json: the trace is jsonl (FR-16); hand-rolled json is not defensible.
# getrandom: run-id uniqueness needs os randomness, nothing more.
# thiserror: typed library errors per the rust standard.

[dependencies]
getrandom = "0.4.3"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints.clippy]
# the supervisor never panics on a runtime path; tests opt out explicitly per module
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[dev-dependencies]
tempfile = "3.27.0"

# the NFR-2 overhead harness (docs/measurements/0001-m1-overhead.md); custom main, no
# criterion. linux-only body, no-op elsewhere. ci does not run benches.
[[bench]]
name = "overhead"
harness = false
